// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-simple-toast-legacy #render should render action toast 1`] = `
<gux-toast class="gux-toast-action" toast-type="action">
  <mock:shadow-root>
    <div class="gux-icon gux-icon-action">
      <slot name="icon"></slot>
    </div>
    <div class="gux-content">
      <div class="gux-message">
        <gux-truncate class="gux-message-title" max-lines="1">
          <slot name="title"></slot>
        </gux-truncate>
        <gux-truncate class="gux-message-body" max-lines="2">
          <slot name="message"></slot>
        </gux-truncate>
      </div>
      <div class="gux-buttons-bar">
        <gux-button-slot-beta>
          <slot name="action-2"></slot>
        </gux-button-slot-beta>
        <gux-button-slot-beta accent="primary">
          <slot name="action-1"></slot>
        </gux-button-slot-beta>
      </div>
    </div>
    <gux-dismiss-button position="inherit"></gux-dismiss-button>
  </mock:shadow-root>
  <gux-icon decorative="" icon-name="fa/diamond-regular" slot="icon"></gux-icon>
  <div slot="title">
    2 Actions
  </div>
  <div slot="message">
    This is an example message
  </div>
  <button onclick="notify(event)" slot="action-1" type="button">
    Action 1
  </button>
  <button onclick="notify(event)" slot="action-2" type="button">
    Action 2
  </button>
</gux-toast>
`;

exports[`gux-simple-toast-legacy #render should render error toast 1`] = `
<gux-toast class="gux-toast-error" toast-type="error">
  <mock:shadow-root>
    <div class="gux-icon gux-icon-error">
      <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
    </div>
    <div class="gux-content">
      <div class="gux-message">
        <gux-truncate class="gux-message-title" max-lines="1">
          <slot name="title"></slot>
        </gux-truncate>
        <gux-truncate class="gux-message-body" max-lines="2">
          <slot name="message"></slot>
        </gux-truncate>
      </div>
      <div class="gux-buttons-bar">
        <slot name="link"></slot>
      </div>
    </div>
    <gux-dismiss-button position="inherit"></gux-dismiss-button>
  </mock:shadow-root>
  <div slot="title">
    Error Example with Link
  </div>
  <div slot="message">
    This is an example message
  </div>
  <a href="#" slot="link">
    Link
  </a>
</gux-toast>
`;

exports[`gux-simple-toast-legacy #render should render info toast 1`] = `
<gux-toast class="gux-toast-info" toast-type="info">
  <mock:shadow-root>
    <div class="gux-icon gux-icon-info">
      <gux-icon decorative="" icon-name="fa/circle-info-solid"></gux-icon>
    </div>
    <div class="gux-content">
      <div class="gux-message">
        <gux-truncate class="gux-message-title" max-lines="1">
          <slot name="title"></slot>
        </gux-truncate>
        <gux-truncate class="gux-message-body" max-lines="2">
          <slot name="message"></slot>
        </gux-truncate>
      </div>
      <div class="gux-buttons-bar">
        <slot name="link"></slot>
      </div>
    </div>
    <gux-dismiss-button position="inherit"></gux-dismiss-button>
  </mock:shadow-root>
  <div slot="title">
    Info Example with Link
  </div>
  <div slot="message">
    This is an example message
  </div>
  <a href="#" slot="link">
    Link
  </a>
</gux-toast>
`;

exports[`gux-simple-toast-legacy #render should render success toast 1`] = `
<gux-toast class="gux-toast-success" toast-type="success">
  <mock:shadow-root>
    <div class="gux-icon gux-icon-success">
      <gux-icon decorative="" icon-name="fa/circle-check-solid"></gux-icon>
    </div>
    <div class="gux-content">
      <div class="gux-message">
        <gux-truncate class="gux-message-title" max-lines="1">
          <slot name="title"></slot>
        </gux-truncate>
        <gux-truncate class="gux-message-body" max-lines="2">
          <slot name="message"></slot>
        </gux-truncate>
      </div>
      <div class="gux-buttons-bar">
        <slot name="link"></slot>
      </div>
    </div>
    <gux-dismiss-button position="inherit"></gux-dismiss-button>
  </mock:shadow-root>
  <div slot="title">
    Success Example with Link
  </div>
  <div slot="message">
    This is an example message
  </div>
  <a href="#" slot="link">
    Link
  </a>
</gux-toast>
`;

exports[`gux-simple-toast-legacy #render should render warning toast 1`] = `
<gux-toast class="gux-toast-warning" toast-type="warning">
  <mock:shadow-root>
    <div class="gux-icon gux-icon-warning">
      <gux-icon decorative="" icon-name="fa/triangle-exclamation-solid"></gux-icon>
    </div>
    <div class="gux-content">
      <div class="gux-message">
        <gux-truncate class="gux-message-title" max-lines="1">
          <slot name="title"></slot>
        </gux-truncate>
        <gux-truncate class="gux-message-body" max-lines="2">
          <slot name="message"></slot>
        </gux-truncate>
      </div>
      <div class="gux-buttons-bar">
        <slot name="link"></slot>
      </div>
    </div>
    <gux-dismiss-button position="inherit"></gux-dismiss-button>
  </mock:shadow-root>
  <div slot="title">
    Warning Example with Link
  </div>
  <div slot="message">
    This is an example message
  </div>
  <a href="#" slot="link">
    Link
  </a>
</gux-toast>
`;
